--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ yarn-debug.log*
 yarn-error.log*
 lerna-debug.log*
 .pnpm-debug.log*
+.DS_S
 
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
@@ -138,3 +139,9 @@ dist
 # Database
 data/
 data/*.json
+
+# Gluegun Config Overrides
+.photo-flow.local.json
+.photo-flow.*.local.json
+.photo-flowrc.local
+.photo-flowrc.*.local
