--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,22 +1,17 @@
 {
   "compilerOptions": {
-    "allowSyntheticDefaultImports": true,
-    "experimentalDecorators": true,
-    "lib": ["es2020"],
+    "allowJs": true,
+    "outDir": "build",
+    "rootDir": "src",
+    "target": "es2017",
     "module": "commonjs",
     "moduleResolution": "node",
-    "noImplicitAny": false,
-    "noImplicitThis": true,
-    "noUnusedLocals": true,
-    "sourceMap": true,
-    "outDir": "build",
-    "strict": true,
-    "target": "es2020",
+    "lib": ["es2015", "es2016", "es2017", "es2018"],
     "declaration": true,
-    "declarationDir": "build/types",
+    "strict": true,
+    "types": ["node"],
     "esModuleInterop": true,
-    "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true
+    "resolveJsonModule": true
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "build"]
