--- a/photo_gallery/package.json
+++ b/photo_gallery/package.json
@@ -18,6 +18,7 @@
     "astro": "^5.9.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-simple-maps": "^3.0.0",
     "sharp": "^0.33.2",
     "tailwindcss": "^3.4.1"
   },
