--- a/photo_gallery/package.json
+++ b/photo_gallery/package.json
@@ -19,12 +19,12 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-simple-maps": "^3.0.0",
-    "sharp": "^0.33.2",
+    "sharp": "^0.33.5",
     "tailwindcss": "^3.4.1",
     "topojson-client": "^3.1.0"
   },
   "devDependencies": {
-    "typescript": "^5.3.3",
-    "@types/topojson-client": "^3.1.4"
+    "@types/topojson-client": "^3.1.4",
+    "typescript": "^5.3.3"
   }
 }
